README now presents the outputs. EL2 class uses gradient for convergence check. This is experimental. Now, the version is 1.2.0.9000

--- a/README.Rmd
+++ b/README.Rmd
@@ -37,7 +37,7 @@ devtools::install_github("markean/melt")
 
 
 ## Usage
-```{r eval = FALSE}
+```{r eval = TRUE}
 library(melt)
 # one sample test (mean)
 el_mean(par = 0, x = rnorm(n = 100))
