CRAN 1.5.0 release ready.

--- a/README.Rmd
+++ b/README.Rmd
@@ -62,5 +62,10 @@ confint(fit3)
 lhs <- matrix(c(1, -1, 0, 0,
                 0, 1, -1, 0,
                 0, 0, 1, -1), byrow = TRUE, nrow = 3)
-lht(fit3, lhs)
+lht(fit3, lhs = lhs)
+
+
+# logistic regression
+fit4 <- el_glm(vs ~ mpg, data = mtcars, family = binomial)
+summary(fit4)
 ```
