unit tests improved

--- a/README.Rmd
+++ b/README.Rmd
@@ -22,7 +22,7 @@ knitr::opts_chunk$set(
 <!-- badges: end -->
 
 ## Overview
-The R package **melt** provides a unified framework for data analysis with empirical likelihood methods. A collection of functions are available for regression analysis and hypothesis testing. Much of its functionality and syntax mimics the corresponding base R functions. The core computational routines are implemented with the 'Eigen' C++ library and 'RcppEigen' interface, with OpenMP for parallel computation. Additional functions are available for multiple testing for the analysis of experimental designs. Details of the testing procedures are given in [Kim et al. (2021)](https://arxiv.org/abs/2112.09206). 
+The R package **melt** provides a unified framework for data analysis with empirical likelihood methods. A collection of functions are available for regression analysis and hypothesis testing. Much of its functionality and syntax mimics the corresponding base R functions. The core computational routines are implemented with the 'Eigen' C++ library and 'RcppEigen' interface, with OpenMP for parallel computation. Additional functions are available for multiple testing for the analysis of experimental designs. Details of the testing procedures are given in [Kim, MacEachern, and Peruggia (2021)](https://arxiv.org/abs/2112.09206). 
 
 
 ## Installation
@@ -42,19 +42,19 @@ devtools::install_github("markean/melt")
 ```{r eval = TRUE}
 library(melt)
 # one sample test for mean
-fit1 <- el_mean(par = 0, x = rnorm(n = 100))
+fit1 <- el_mean(rnorm(n = 100), par = 0)
 confint(fit1)
 
 
 # linear regression
-fit2 <- el_lm(formula = mpg ~ wt, data = mtcars)
+fit2 <- el_lm(mpg ~ wt, data = mtcars)
 summary(fit2)
 confint(fit2)
 
 
 # analysis of variance 
 data("clothianidin")
-fit3 <- el_lm(clo ~ -1 + trt, clothianidin)
+fit3 <- el_lm(clo ~ -1 + trt, data = clothianidin)
 summary(fit3)
 confint(fit3)
 
