--- a/vignettes/performance.Rmd
+++ b/vignettes/performance.Rmd
@@ -7,7 +7,6 @@ vignette: >
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
-
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
@@ -17,19 +16,21 @@ knitr::opts_chunk$set(
   fig.align = "center"
 )
 ```
-We provide a description of performance of computing empirical likelihood with `el_mean()`.
-We test the computation speed with simulated data sets in two different settings: 1) the number of observations increases with the number of parameters fixed and 2) the number of parameters increases with the number of observations fixed. 
-The tests were done using an Intel(R) Core(TM) i7 CPU (1.90GHz) on a Arch Linux x86_64 machine.
-We first load necessary packages.
+All the tests were done on an Arch Linux x86_64 machine with an Intel(R) Core(TM) i7 CPU (1.90GHz).
+We first load the necessary packages.
 ```{r setup}
 library(melt)
 library(microbenchmark)
 library(ggplot2)
 ```
-## 1. Increasing the numbers of observations
+## Empirical likelihood computation
+We show the performance of computing empirical likelihood with `el_mean()`.
+We test the computation speed with simulated data sets in two different settings: 1) the number of observations increases with the number of parameters fixed, and 2) the number of parameters increases with the number of observations fixed. 
+
+### Increasing the number of observations
 We fix the number of parameters at $p = 10$, and simulate the parameter value and $n \times p$ matrices using `rnorm()`. In order to ensure convergence with a large $n$, we set a large threshold value using `el_control()`.
 ```{r echo=TRUE}
-set.seed(31775)
+set.seed(3175775)
 p <- 10
 par <- rnorm(p, sd = 0.1)
 n1e2 <- matrix(rnorm(100 * p), ncol = p)
@@ -44,56 +45,34 @@ result <- microbenchmark(
   n1e4 = el_mean(n1e4, par = par, control = ctrl),
   n1e5 = el_mean(n1e5, par = par, control = ctrl)
 )
-
-result
-suppressMessages(autoplot(result))
 ```
-On average, it takes less than a second to evaluate empirical likelihood with a $100000 \times 10$ matrix at a parameter value satisfying the convex hull constraint.
 
-## 2. Increasing the numbers of parameters
-This time we fix the number of observations at $n = 1000$.
+Below are the results:
+```{r message=FALSE}
+result
+autoplot(result)
+```
+
+### Increasing the number of parameters
+This time we fix the number of observations at $n = 1000$, and evaluate empirical likelihood at zero vectors of different sizes.
 ```{r}
+set.seed(52361357)
 n <- 1000
 p5 <- matrix(rnorm(n * 5), ncol = 5)
-p20 <- matrix(rnorm(n * 20), ncol = 20)
+p25 <- matrix(rnorm(n * 25), ncol = 25)
 p100 <- matrix(rnorm(n * 100), ncol = 100)
-p500 <- matrix(rnorm(n * 500), ncol = 500)
+p400 <- matrix(rnorm(n * 400), ncol = 400)
 
 result2 <- microbenchmark(
   p5 = el_mean(p5, par = rep(0, 5), control = ctrl),
-  p20 = el_mean(p20, par = rep(0, 20), control = ctrl),
+  p25 = el_mean(p25, par = rep(0, 25), control = ctrl),
   p100 = el_mean(p100, par = rep(0, 100), control = ctrl),
-  p500 = el_mean(p500, par = rep(0, 500), control = ctrl)
+  p400 = el_mean(p400, par = rep(0, 400), control = ctrl)
 )
+```
 
+```{r message=FALSE}
 result2
-suppressMessages(autoplot(result2))
+autoplot(result2)
 ```
-
-
-```{r}
-# result2 <- microbenchmark(times = 10, unit = "seconds",
-#   n1e2 = el_mean(n1e2, par = par, control = ctrl),
-#   n1e3 = el_mean(n1e3, par = par, control = ctrl),
-#   n1e4 = el_mean(n1e4, par = par, control = ctrl),
-#   n1e5 = el_mean(n1e5, par = par, control = ctrl)
-# )
-#
-# result3 <- microbenchmark(times = 100,
-#   n1e2 = el_mean(n1e2, par = par, control = ctrl),
-#   n1e3 = el_mean(n1e3, par = par, control = ctrl),
-#   n1e4 = el_mean(n1e4, par = par, control = ctrl),
-#   n1e5 = el_mean(n1e5, par = par, control = ctrl)
-# )
-# result4 <- result3
-# result4$time <- result4$time * 1e-09
-# ggplot(result4, aes(x = time, y = expr)) +
-#   geom_violin()
-
-
-
-
-# microbenchmark(el_mean(x1000, 0))
-# microbenchmark(el_mean(x10000, 0))
-# microbenchmark(el_mean(x100000, 0))
-```
+On average, evaluating empirical likelihood with a 100000×10 or 1000×400 matrix at a parameter value satisfying the convex hull constraint takes less than a second.
