unit tests improved

--- a/vignettes/performance.Rmd
+++ b/vignettes/performance.Rmd
@@ -11,8 +11,8 @@ vignette: >
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
-  fig.width = 7.5, 
-  fig.height = 5, 
+  fig.width = 7,
+  fig.height = 5,
   fig.align = "center"
 )
 ```
@@ -34,17 +34,12 @@ We fix the number of parameters at $p = 10$, and simulate the parameter value an
 set.seed(3175775)
 p <- 10
 par <- rnorm(p, sd = 0.1)
-n1e2 <- matrix(rnorm(100 * p), ncol = p)
-n1e3 <- matrix(rnorm(1000 * p), ncol = p)
-n1e4 <- matrix(rnorm(10000 * p), ncol = p)
-n1e5 <- matrix(rnorm(100000 * p), ncol = p)
-
 ctrl <- el_control(th = 1e+10)
 result <- microbenchmark(
-  n1e2 = el_mean(n1e2, par = par, control = ctrl),
-  n1e3 = el_mean(n1e3, par = par, control = ctrl),
-  n1e4 = el_mean(n1e4, par = par, control = ctrl),
-  n1e5 = el_mean(n1e5, par = par, control = ctrl)
+  n1e2 = el_mean(matrix(rnorm(100 * p), ncol = p), par = par, control = ctrl),
+  n1e3 = el_mean(matrix(rnorm(1000 * p), ncol = p), par = par, control = ctrl),
+  n1e4 = el_mean(matrix(rnorm(10000 * p), ncol = p), par = par, control = ctrl),
+  n1e5 = el_mean(matrix(rnorm(100000 * p), ncol = p), par = par, control = ctrl)
 )
 ```
 
@@ -59,16 +54,23 @@ This time we fix the number of observations at $n = 1000$, and evaluate empirica
 ```{r}
 set.seed(52361357)
 n <- 1000
-p5 <- matrix(rnorm(n * 5), ncol = 5)
-p25 <- matrix(rnorm(n * 25), ncol = 25)
-p100 <- matrix(rnorm(n * 100), ncol = 100)
-p400 <- matrix(rnorm(n * 400), ncol = 400)
-
 result2 <- microbenchmark(
-  p5 = el_mean(p5, par = rep(0, 5), control = ctrl),
-  p25 = el_mean(p25, par = rep(0, 25), control = ctrl),
-  p100 = el_mean(p100, par = rep(0, 100), control = ctrl),
-  p400 = el_mean(p400, par = rep(0, 400), control = ctrl)
+  p5 = el_mean(matrix(rnorm(n * 5), ncol = 5),
+    par = rep(0, 5),
+    control = ctrl
+  ),
+  p25 = el_mean(matrix(rnorm(n * 25), ncol = 25),
+    par = rep(0, 25),
+    control = ctrl
+  ),
+  p100 = el_mean(matrix(rnorm(n * 100), ncol = 100),
+    par = rep(0, 100),
+    control = ctrl
+  ),
+  p400 = el_mean(matrix(rnorm(n * 400), ncol = 400),
+    par = rep(0, 400),
+    control = ctrl
+  )
 )
 ```
 
@@ -77,3 +79,5 @@ result2
 autoplot(result2)
 ```
 On average, evaluating empirical likelihood with a 100000×10 or 1000×400 matrix at a parameter value satisfying the convex hull constraint takes less than a second.
+
+## 2.
