--- a/README.Rmd
+++ b/README.Rmd
@@ -22,7 +22,7 @@ knitr::opts_chunk$set(
 <!-- badges: end -->
 
 ## Overview
-The R package **melt** provides a unified framework for data analysis with empirical likelihood methods. A collection of functions are available for regression analysis and hypothesis testing. Much of its functionality and syntax mimics the corresponding base R functions. The core computational routines are implemented with the 'Eigen' C++ library and 'RcppEigen' interface, with OpenMP for parallel computation. Additional functions are available for multiple testing for the analysis of experimental designs. Details of the testing procedures are given in [Kim, MacEachern, and Peruggia (2021)](https://arxiv.org/abs/2112.09206). 
+The R package **melt** provides a unified framework for data analysis with empirical likelihood methods. A collection of functions are available for regression analysis and hypothesis testing. The core computational routines are implemented with the 'Eigen' C++ library and 'RcppEigen' interface, with OpenMP for parallel computation. Details of the testing procedures are given in [Kim, MacEachern, and Peruggia (2021)](https://arxiv.org/abs/2112.09206). 
 
 
 ## Installation
@@ -39,34 +39,33 @@ devtools::install_github("markean/melt")
 
 
 ## Usage
-```{r eval = TRUE}
+```{r usage, eval = TRUE}
 library(melt)
-# one sample test for mean
-fit1 <- el_mean(rnorm(n = 100), par = 0)
-confint(fit1)
+
+# Test for the mean
+data("precip")
+fit <- el_mean(precip, par = 30)
+fit
 
 
-# linear regression
-fit2 <- el_lm(mpg ~ wt, data = mtcars)
+# Linear regression
+data("mtcars")
+fit2 <- el_lm(mpg ~ disp + hp + wt + qsec, data = mtcars)
 summary(fit2)
-confint(fit2)
+cr <- confreg(fit2, parm = c("disp", "hp"), npoints = 200)
+plot(cr)
 
 
-# analysis of variance 
+# Analysis of variance 
 data("clothianidin") 
 fit3 <- el_lm(clo ~ -1 + trt, data = clothianidin)
 summary(fit3)
 confint(fit3)
 
 
-# test of no treatment effect
+# Test of no treatment effect
 lhs <- matrix(c(1, -1, 0, 0,
                 0, 1, -1, 0,
                 0, 0, 1, -1), byrow = TRUE, nrow = 3)
 elt(fit3, lhs = lhs)
-
-
-# logistic regression
-fit4 <- el_glm(vs ~ mpg, data = mtcars, family = binomial)
-summary(fit4)
 ```
