--- a/README.Rmd
+++ b/README.Rmd
@@ -8,6 +8,7 @@ output: github_document
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
+  dpi = 300,
   fig.path = "man/figures/README-",
   out.width = "100%"
 )
