pdf vignette updated

--- a/README.Rmd
+++ b/README.Rmd
@@ -57,16 +57,18 @@ cr <- confreg(fit2, parm = c("disp", "hp"), npoints = 200)
 plot(cr)
 
 
-# Analysis of variance 
-data("clothianidin") 
+# Analysis of variance
+data("clothianidin")
 fit3 <- el_lm(clo ~ -1 + trt, data = clothianidin)
 summary(fit3)
 confint(fit3)
 
 
 # Test of no treatment effect
-lhs <- matrix(c(1, -1, 0, 0,
-                0, 1, -1, 0,
-                0, 0, 1, -1), byrow = TRUE, nrow = 3)
-elt(fit3, lhs = lhs)
+contrast <- matrix(c(
+  1, -1, 0, 0,
+  0, 1, -1, 0,
+  0, 0, 1, -1
+), byrow = TRUE, nrow = 3)
+elt(fit3, lhs = contrast)
 ```
