--- a/README.Rmd
+++ b/README.Rmd
@@ -44,37 +44,59 @@ You can install the latest development version from
 devtools::install_github("markean/melt")
 ```
 
+## Main functions
+melt provides an intuitive API for performing the most common data analysis tasks:
+
+* `el_lm()` fits a linear model with empirical likelihood.
+* `el_glm()` fits a generalized linear model with empirical likelihood.
+* `confint()` computes confidence intervals for model parameters.
+* `confreg()` computes a confidence region for model parameters.
+* `elt()` tests a linear hypothesis.
+* `elmt()` performs multiple testing simultaneously.
 
 ## Usage
 ```{r usage, eval = TRUE}
 library(melt)
+set.seed(971112)
 
-# Test for the mean
+## Test for the mean
 data("precip")
-fit <- el_mean(precip, par = 30)
-fit
+el_mean(precip, par = 30)
 
 
-# Linear regression
+## Linear model
 data("mtcars")
-fit2 <- el_lm(mpg ~ disp + hp + wt + qsec, data = mtcars)
-summary(fit2)
-cr <- confreg(fit2, parm = c("disp", "hp"), npoints = 200)
+fit_lm <- el_lm(mpg ~ disp + hp + wt + qsec, data = mtcars)
+summary(fit_lm)
+cr <- confreg(fit_lm, parm = c("disp", "hp"), npoints = 200)
 plot(cr)
-
-
-# Analysis of variance
 data("clothianidin")
-fit3 <- el_lm(clo ~ -1 + trt, data = clothianidin)
-summary(fit3)
-confint(fit3)
+fit2_lm <- el_lm(clo ~ -1 + trt, data = clothianidin)
+summary(fit2_lm)
+confint(fit2_lm)
 
 
-# Test of no treatment effect
-contrast <- matrix(c(
-  1, -1, 0, 0,
-  0, 1, -1, 0,
-  0, 0, 1, -1
-), byrow = TRUE, nrow = 3)
-elt(fit3, lhs = contrast)
+## Generalized linear model
+data("thiamethoxam")
+fit_glm <- el_glm(visit ~ log(mass) + fruit + foliage + var + trt,
+  family = quasipoisson(link = "log"), data = thiamethoxam,
+  control = el_control(maxit = 100, tol = 1e-08, nthreads = 4)
+)
+summary(fit_glm)
+
+
+## Test of no treatment effect
+contrast <- c(
+  "trtNaked - trtFungicide", "trtFungicide - trtLow", "trtLow - trtHigh"
+)
+elt(fit2_lm, lhs = contrast)
+
+
+## Multiple testing
+contrast2 <- rbind(
+  c(0, 0, 0, 0, 0, 1, 0, 0),
+  c(0, 0, 0, 0, 0, 0, 1, 0),
+  c(0, 0, 0, 0, 0, 0, 0, 1)
+)
+elmt(fit_glm, lhs = contrast2)
 ```
