--- a/README.Rmd
+++ b/README.Rmd
@@ -24,7 +24,8 @@ knitr::opts_chunk$set(
 
 ## Overview
 Empirical likelihood enables a nonparametric, likelihood-driven style of inference without relying on assumptions frequently made in parametric models.
-Empirical likelihood-based tests are asymptotically pivotal and thus avoid explicit studentization, making it also challenging for the methods to be directly extended to other packages for parametric models. 
+Empirical likelihood-based tests are asymptotically pivotal and thus avoid explicit studentization.
+For this reason it is challenging to incorporate empirical likelihood methods directly into other packages that perform inferences for parametric models.
 The R package [melt](https://cran.r-project.org/package=melt) aims to bridge the gap and provide a unified framework for data analysis with empirical likelihood methods.
 A collection of functions are available to perform multiple empirical likelihood tests and construct confidence intervals for linear and generalized linear models in R.
 The package offers an easy-to-use interface and flexibility in specifying hypotheses and calibration methods, extending the framework to simultaneous inferences.
