--- a/README.Rmd
+++ b/README.Rmd
@@ -14,7 +14,8 @@ knitr::opts_chunk$set(
 )
 ```
 
-# melt - Multiple Empirical Likelihood Tests
+# melt - Multiple Empirical Likelihood Tests <a href="https://markean.github.io/melt/"><img src="man/figures/logo.png" align="right" height="139" /></a>
+
 <!-- badges: start -->
 [![Project Status: Active - The project has reached a stable, usable state and is being actively developed.](https://www.repostatus.org/badges/latest/active.svg)](https://www.repostatus.org/#active)
 [![CRAN status](https://www.r-pkg.org/badges/version/melt)](https://CRAN.R-project.org/package=melt)
@@ -51,7 +52,7 @@ melt provides an intuitive API for performing the most common data analysis task
 * `el_lm()` fits a linear model with empirical likelihood.
 * `el_glm()` fits a generalized linear model with empirical likelihood.
 * `confint()` computes confidence intervals for model parameters.
-* `confreg()` computes a confidence region for model parameters.
+* `confreg()` computes confidence region for model parameters.
 * `elt()` tests a linear hypothesis.
 * `elmt()` performs multiple testing simultaneously.
 
