--- a/README.Rmd
+++ b/README.Rmd
@@ -18,9 +18,10 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 [![Project Status: Active - The project has reached a stable, usable state and is being actively developed.](https://www.repostatus.org/badges/latest/active.svg)](https://www.repostatus.org/#active)
-[![CRAN status](https://www.r-pkg.org/badges/version/melt)](https://CRAN.R-project.org/package=melt)
-[![R-CMD-check](https://github.com/markean/melt/actions/workflows/check-standard.yaml/badge.svg)](https://github.com/markean/melt/actions/workflows/check-standard.yaml)
+[![R-CMD-check](https://github.com/ropensci/melt/actions/workflows/check-standard.yaml/badge.svg)](https://github.com/ropensci/melt/actions/workflows/check-standard.yaml)
 [![Codecov test coverage](https://codecov.io/gh/markean/melt/branch/master/graph/badge.svg)](https://app.codecov.io/gh/markean/melt?branch=master)
+[![CRAN status](https://www.r-pkg.org/badges/version/melt)](https://CRAN.R-project.org/package=melt)
+[![ropensci review](https://badges.ropensci.org/550_status.svg)](https://github.com/ropensci/software-review/issues/550)
 <!-- badges: end -->
 
 ## Overview
@@ -40,7 +41,7 @@ You can install the latest stable release from [CRAN](https://cran.r-project.org
 install.packages("melt")
 ```
 You can install the latest development version from
-[Github](https://github.com/markean/melt).
+[Github](https://github.com/ropensci/melt).
 ```{r eval = FALSE}
 # install.packages("devtools")
 devtools::install_github("markean/melt")
@@ -102,3 +103,6 @@ contrast2 <- rbind(
 )
 elmt(fit_glm, lhs = contrast2)
 ```
+
+---
+Please note that this package is released with a [Contributor Code of Conduct](https://ropensci.org/code-of-conduct/). By contributing to this project, you agree to abide by its terms.
