--- a/README.Rmd
+++ b/README.Rmd
@@ -14,13 +14,14 @@ knitr::opts_chunk$set(
 )
 ```
 
-# melt - Multiple Empirical Likelihood Tests <a href="https://markean.github.io/melt/"><img src="man/figures/logo.png" align="right" height="139" /></a>
+# melt - Multiple Empirical Likelihood Tests <a href="https://docs.ropensci.org/melt/"><img src="man/figures/logo.png" align="right" height="139" /></a>
 
 <!-- badges: start -->
 [![Project Status: Active - The project has reached a stable, usable state and is being actively developed.](https://www.repostatus.org/badges/latest/active.svg)](https://www.repostatus.org/#active)
 [![R-CMD-check](https://github.com/ropensci/melt/actions/workflows/check-standard.yaml/badge.svg)](https://github.com/ropensci/melt/actions/workflows/check-standard.yaml)
-[![Codecov test coverage](https://codecov.io/gh/markean/melt/branch/master/graph/badge.svg)](https://app.codecov.io/gh/markean/melt?branch=master)
+[![Codecov test coverage](https://codecov.io/gh/ropensci/melt/branch/master/graph/badge.svg)](https://app.codecov.io/gh/ropensci/melt?branch=master)
 [![CRAN status](https://www.r-pkg.org/badges/version/melt)](https://CRAN.R-project.org/package=melt)
+[![runiverse](https://ropensci.r-universe.dev/badges/melt)](https://ropensci.r-universe.dev/ui#package:melt)
 [![ropensci review](https://badges.ropensci.org/550_status.svg)](https://github.com/ropensci/software-review/issues/550)
 <!-- badges: end -->
 
@@ -41,10 +42,12 @@ You can install the latest stable release from [CRAN](https://cran.r-project.org
 install.packages("melt")
 ```
 You can install the latest development version from
-[Github](https://github.com/ropensci/melt).
+[Github](https://github.com/ropensci/melt) or [R-universe](https://ropensci.r-universe.dev/ui#package:melt).
 ```{r eval = FALSE}
 # install.packages("devtools")
-devtools::install_github("markean/melt")
+devtools::install_github("ropensci/melt")
+
+install.packages("melt", repos = "https://ropensci.r-universe.dev")
 ```
 
 ## Main functions
