srr tags removed

--- a/README.Rmd
+++ b/README.Rmd
@@ -42,11 +42,13 @@ You can install the latest stable release from [CRAN](https://cran.r-project.org
 install.packages("melt")
 ```
 You can install the latest development version from
-[Github](https://github.com/ropensci/melt) or [R-universe](https://ropensci.r-universe.dev/ui#package:melt).
+[GitHub](https://github.com/ropensci/melt) or [R-universe](https://ropensci.r-universe.dev/ui#package:melt).
 ```{r eval = FALSE}
 # install.packages("devtools")
 devtools::install_github("ropensci/melt")
+```
 
+```{r eval = FALSE}
 install.packages("melt", repos = "https://ropensci.r-universe.dev")
 ```
 
