--- a/README.Rmd
+++ b/README.Rmd
@@ -21,7 +21,7 @@ knitr::opts_chunk$set(
 [![R-CMD-check](https://github.com/ropensci/melt/actions/workflows/check-standard.yaml/badge.svg)](https://github.com/ropensci/melt/actions/workflows/check-standard.yaml)
 [![Codecov test coverage](https://codecov.io/gh/ropensci/melt/branch/master/graph/badge.svg)](https://app.codecov.io/gh/ropensci/melt?branch=master)
 [![CRAN status](https://www.r-pkg.org/badges/version/melt)](https://CRAN.R-project.org/package=melt)
-[![runiverse](https://ropensci.r-universe.dev/badges/melt)](https://ropensci.r-universe.dev/ui#package:melt)
+[![runiverse](https://ropensci.r-universe.dev/badges/melt)](http://ropensci.r-universe.dev/ui/#package:melt)
 [![ropensci review](https://badges.ropensci.org/550_status.svg)](https://github.com/ropensci/software-review/issues/550)
 <!-- badges: end -->
 
@@ -34,7 +34,7 @@ A collection of functions are available to perform multiple empirical likelihood
 The package offers an easy-to-use interface and flexibility in specifying hypotheses and calibration methods, extending the framework to simultaneous inferences.
 The core computational routines are implemented with the [Eigen](https://eigen.tuxfamily.org/index.php?title=Main_Page) C++ library and [RcppEigen](https://cran.r-project.org/package=RcppEigen) interface, with OpenMP for parallel computation. 
 Details of the testing procedures are given in [Kim, MacEachern, and Peruggia (2023)](https://doi.org/10.1080/10485252.2023.2206919). 
-This work was supported by the U.S. National Science Foundation under Grants No. [SES-1921523](https://nsf.gov/awardsearch/showAward?AWD_ID=1921523) and [DMS-2015552](https://nsf.gov/awardsearch/showAward?AWD_ID=2015552).
+This work was supported by the U.S. National Science Foundation under Grants No. [SES-1921523](https://www.nsf.gov/awardsearch/showAward?AWD_ID=1921523) and [DMS-2015552](https://www.nsf.gov/awardsearch/showAward?AWD_ID=2015552).
 
 ## Installation
 You can install the latest stable release from [CRAN](https://cran.r-project.org/package=melt).
@@ -42,7 +42,7 @@ You can install the latest stable release from [CRAN](https://cran.r-project.org
 install.packages("melt")
 ```
 You can install the latest development version from
-[GitHub](https://github.com/ropensci/melt) or [R-universe](https://ropensci.r-universe.dev/ui#package:melt).
+[GitHub](https://github.com/ropensci/melt) or [R-universe](http://ropensci.r-universe.dev/ui/#package:melt).
 ```{r eval = FALSE}
 # install.packages("devtools")
 devtools::install_github("ropensci/melt")
