--- a/README.Rmd
+++ b/README.Rmd
@@ -29,10 +29,11 @@ knitr::opts_chunk$set(
 ## Overview
 
 melt provides a unified framework for data analysis with empirical likelihood methods.
-A collection of functions are available to perform multiple empirical likelihood tests and construct confidence intervals for various models in 'R'.
-It offers an easy-to-use interface and flexibility in specifying hypotheses and calibration methods, extending the framework to simultaneous inferences.
+A collection of functions is available to perform multiple empirical likelihood tests and construct confidence intervals for various models in 'R'.
+melt offers an easy-to-use interface and flexibility in specifying hypotheses and calibration methods, extending the framework to simultaneous inferences.
 The core computational routines are implemented with the 'Eigen' 'C++' library and 'RcppEigen' interface, with 'OpenMP' for parallel computation. 
-Details of the testing procedures are given in [Kim, MacEachern, and Peruggia (2023)](https://doi.org/10.1080/10485252.2023.2206919). 
+Details of the testing procedures are provided in [Kim, MacEachern, and Peruggia (2023)](https://doi.org/10.1080/10485252.2023.2206919). 
+The package has a companion paper by [Kim, MacEachern, and Peruggia (2024)](https://doi.org/10.18637/jss.v108.i05).
 This work was supported by the U.S. National Science Foundation under Grants No. [SES-1921523](https://www.nsf.gov/awardsearch/showAward?AWD_ID=1921523) and [DMS-2015552](https://www.nsf.gov/awardsearch/showAward?AWD_ID=2015552).
 
 
