checkmate package adoption wip

--- a/vignettes/performance.Rmd
+++ b/vignettes/performance.Rmd
@@ -9,6 +9,7 @@ vignette: >
 ---
 ```{r, include=FALSE}
 knitr::opts_chunk$set(
+  cache = TRUE,
   collapse = TRUE,
   comment = "#>",
   dpi = 300,
