new vignette wip

--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -21,6 +21,17 @@
   doi       = {10.1080/10485252.2023.2206919}
 }
 
+@Book{MASS,
+  title = {Modern Applied Statistics with \proglang{S}},
+  author = {W. N. Venables and B. D. Ripley},
+  publisher = {Springer-Verlag},
+  edition = {4th},
+  address = {New York},
+  year = {2002},
+  note = {ISBN 0-387-95457-0},
+  url = {https://www.stats.ox.ac.uk/pub/MASS4/},
+}
+
 @manual{melt,
   title  = {\pkg{melt}: Multiple Empirical Likelihood Tests},
   author = {Eunseop Kim},
