--- a/vignettes/article.Rnw
+++ b/vignettes/article.Rnw
@@ -1,7 +1,7 @@
 %\VignetteEngine{knitr::knitr}
 %\VignetteIndexEntry{melt: Multiple Empirical Likelihood Tests in R}
 \documentclass[nojss]{jss}
-\usepackage{amsmath,amssymb,bm,mathtools,booktabs,orcidlink,thumbpdf,lmodern}
+\usepackage{amsmath,amssymb,bm,mathtools,booktabs,thumbpdf,lmodern}
 
 \usepackage[linesnumbered, ruled, vlined]{algorithm2e}
 
