--- a/vignettes/article.Rnw
+++ b/vignettes/article.Rnw
@@ -948,7 +948,7 @@ library("ggplot2")
 data("synth.tr", package = "MASS")
 data <- dplyr::select(synth.tr, c(xs, ys))
 @
-%
+
 With the focus on \code{xs} and \code{ys}, we first visualize the domain of the
 EL function with the convex hull constraint in Figure~\ref{fig:hull}.
 %
@@ -1091,28 +1091,12 @@ rates data \code{UScrime} available in \pkg{MASS}.
 Here we update the control parameters for significance tests of the
 coefficients.
 %
-\begin{Schunk}
-\begin{Sinput}
-R> data("UScrime", package = "MASS")
-R> ctrl <- el_control(maxit = 1000, nthreads = 2)
-R> (fit_lm <- el_lm(y ~ Pop + Ineq, data = UScrime, control = ctrl))
-\end{Sinput}
-\begin{Soutput}
-  Empirical Likelihood
-
-Model: lm
-
-Maximum EL estimates:
-(Intercept)         Pop        Ineq
-    1046.75        3.25       -1.34
-
-Chisq: 14, df: 2, Pr(>Chisq): 0.000933
-Constrained EL: converged
-\end{Soutput}
-\end{Schunk}
-
-\vspace*{-0.25cm}
-
+<<el_lm fit>>=
+data("UScrime", package = "MASS")
+ctrl <- el_control(maxit = 1000, nthreads = 2)
+(fit_lm <- el_lm(y ~ Pop + Ineq, data = UScrime, control = ctrl))
+@
+%
 The \fct{print} method also applies and shows the MELE, the overall model test
 result, and the convergence status.
 The estimates are obtained from \fct{lm.fit}.
@@ -1134,53 +1118,11 @@ imposed by a hypothesis is incompatible with the convex hull constraint.
 The control parameters affect the test results as well.
 The \fct{summary} method reports more details, such as the results of
 significance tests, where each test involves solving a constrained EL problem.
-
+%
+<<el_lm summary>>=
+summary(fit_lm)
+@
 \vspace*{-0.25cm}
-
-\begin{Schunk}
-\begin{Sinput}
-R> summary(fit_lm)
-\end{Sinput}
-
-\vspace*{-0.5cm}
-
-\begin{Soutput}
-  Empirical Likelihood
-
-Model: lm
-
-Call:
-el_lm(formula = y ~ Pop + Ineq, data = UScrime, control = ctrl)
-
-Number of observations: 47
-Number of parameters: 3
-
-Parameter values under the null hypothesis:
-(Intercept)         Pop        Ineq
-       1047           0           0
-
-Lagrange multipliers:
-[1]  3.50e-03  1.42e-05 -2.62e-05
-
-Maximum EL estimates:
-(Intercept)         Pop        Ineq
-    1046.75        3.25       -1.34
-\end{Soutput}
-
-\begin{Soutput}
-logL: -188 , logLR: -6.98
-Chisq: 14, df: 2, Pr(>Chisq): 0.000933
-Constrained EL: converged
-
-Coefficients:
-            Estimate  Chisq Pr(>Chisq)
-(Intercept)  1046.75 447.64    < 2e-16 ***
-Pop             3.25   4.93    0.02647 *
-Ineq           -1.34  13.65    0.00022 ***
----
-Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
-\end{Soutput}
-\end{Schunk}
 %
 These tests are all asymptotically pivotal without explicit studentization.
 As a result, the output does not have standard errors.
@@ -1191,17 +1133,9 @@ The chi-square calibration is the default, but the user can specify a critical
 value \code{cv} optionally.
 Below we calculate asymptotic \({95\%}\) confidence intervals.
 %
-\begin{Schunk}
-\begin{Sinput}
-R> confint(fit_lm)
-\end{Sinput}
-\begin{Soutput}
-               lower     upper
-(Intercept) 579.7584 1698.9193
-Pop           0.3492    6.3530
-Ineq         -1.9453   -0.6872
-\end{Soutput}
-\end{Schunk}
+<<el_lm confint>>=
+confint(fit_lm)
+@
 %
 Without standard errors and \fct{vcov} methods, the \code{lower} and
 \code{upper} confidence limits do not necessarily correspond to \({2.5}\) and
@@ -1214,16 +1148,20 @@ The return value is a \class{ConfregEL} object containing a matrix whose rows
 consist of the points, and the \fct{plot} method visualizes the confidence
 region (Figure~\ref{fig:confreg}).
 %
-\begin{Schunk}
-\begin{Sinput}
-R> cr <- confreg(fit_lm, parm = c("Pop", "Ineq"), npoints = 200)
-R> plot(cr, cex = 1.5, cex.axis = 1.5, cex.lab = 1.5, lwd = 2, tck = -0.01)
-\end{Sinput}
-\end{Schunk}
-
+<<confreg, eval=FALSE>>=
+cr <- confreg(fit_lm, parm = c("Pop", "Ineq"), npoints = 200)
+plot(cr, cex = 1.5, cex.axis = 1.5, cex.lab = 1.5, lwd = 2, tck = -0.01)
+@
+%
 \begin{figure}[t!]
 \centering
-% \includegraphics{jss4834-confreg_plot}
+<<confreg_plot, echo=FALSE, fig.width=10, fig.height=7.5>>=
+cr <- confreg(fit_lm, parm = c("Pop", "Ineq"), npoints = 200)
+plot(cr, cex = 1.5, cex.axis = 1.5, cex.lab = 1.5, lwd = 2, tck = -0.01)
+axis(1, lwd.ticks = 2, labels = FALSE, tck = -0.01)
+axis(2, lwd.ticks = 2, labels = FALSE, tck = -0.01)
+box(lwd = 2)
+@
 \caption{\label{fig:confreg} Scatter plot of the boundary points for asymptotic
   \({95\%}\) confidence region of \code{Pop} and \code{Ineq} in \code{fit\_lm}.
 At the center of the plot is the MELE \(\hat{\theta}\).}
@@ -1236,38 +1174,37 @@ type \class{numeric}, with the length equal to the number of observations in the
 data.
 Figure~\ref{fig:eld} shows the ELD values from the \fct{plot} method.
 %
-\begin{Schunk}
-\begin{Sinput}
-R> eld <- eld(fit_lm)
-R> summary(eld)
-R> plot(eld, cex = 1.5, cex.axis = 1.5, cex.lab = 1.5, lwd = 2, pch = 19,
-+    tck = -0.01)
-\end{Sinput}
-\end{Schunk}
-\begin{Schunk}
-\begin{Soutput}
-   Min. 1st Qu.  Median    Mean 3rd Qu.    Max.
-   0.00    0.19    1.31    4.03    3.55   42.47
-\end{Soutput}
-\end{Schunk}
+<<eld, eval=FALSE>>=
+eld <- eld(fit_lm)
+summary(eld)
+plot(eld,
+  cex = 1.5, cex.axis = 1.5, cex.lab = 1.5, lwd = 2, pch = 19, tck = -0.01
+)
+@
+<<eld2, echo=FALSE>>=
+eld <- eld(fit_lm)
+summary(eld)
+@
 %
 The code below shows that the observation with the largest ELD also has the
 largest Cook's distance from the same linear model fitted by \fct{lm}.
 %
-\begin{Schunk}
-\begin{Sinput}
-R> fit2_lm <- lm(y ~ Pop + Ineq, data = UScrime)
-R> cd <- cooks.distance(fit2_lm)
-R> all.equal(which.max(eld), which.max(cd), check.attributes = FALSE)
-\end{Sinput}
-\begin{Soutput}
-[1] TRUE
-\end{Soutput}
-\end{Schunk}
+<<cooks.distance>>=
+fit2_lm <- lm(y ~ Pop + Ineq, data = UScrime)
+cd <- cooks.distance(fit2_lm)
+all.equal(which.max(eld), which.max(cd), check.attributes = FALSE)
+@
 %
 \begin{figure}[t!]
 \centering
-% \includegraphics{jss4834-eld_plot}
+<<eld_plot, echo=FALSE, fig.width=10, fig.height=7.5>>=
+plot(eld,
+  cex = 1.5, cex.axis = 1.5, cex.lab = 1.5, lwd = 2, pch = 19, tck = -0.01
+)
+axis(1, lwd.ticks = 2, labels = FALSE, tck = -0.01)
+axis(2, lwd.ticks = 2, labels = FALSE, tck = -0.01)
+box(lwd = 2)
+@
 \caption{\label{fig:eld} Scatter plot of empirical likelihood displacement
   versus observation index in \code{fit\_lm}.
 The 4th observation has the largest value.}
