--- a/vignettes/usage.Rmd
+++ b/vignettes/usage.Rmd
@@ -13,14 +13,8 @@ vignette: >
 
 ```{r, include=FALSE}
 knitr::opts_chunk$set(
-  cache = TRUE,
-  collapse = TRUE,
-  comment = "#>",
-  dpi = 300,
-  fig.width = 7,
-  fig.height = 5,
-  fig.align = "center",
-  out.width = "100%"
+  collapse = TRUE, comment = "#>", dpi = 300, fig.width = 7, fig.height = 5,
+  fig.align = "center", out.width = "100%"
 )
 ```
 ```{r, echo=FALSE}
